--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/imgs/hero_1.jpg" class="d-block w-100" alt="Hero 1">
+                    <img src="assets/imgs/Background/IMG-20230910-WA0082.jpg" class="d-block w-100" alt="Hero 1">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="container">
                             <h2 class="text-white display-5">Discover Your Dreams</h2>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="assets/imgs/hero_2.jpg" class="d-block w-100" alt="Hero 2">
+                <img src="assets/imgs/courses/IMG-20230620-WA0436.jpg" class="d-block w-100" alt="Hero 2">
                 <div class="carousel-caption d-flex align-items-center justify-content-center">
                     <div class="container">
                         <h2 class="text-white display-5">Your Future Awaits</h2>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="assets/imgs/hero_3.jpg" class="d-block w-100" alt="Hero 3">
+                <img src="assets/imgs/Background/IMG-20250321-WA0304.jpg" class="d-block w-100" alt="Hero 3">
                 <div class="carousel-caption d-flex align-items-center justify-content-center">
                     <div class="container">
                         <h2 class="text-white display-5">Empower Your Education</h2>
