--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm sticky-top" style="background-color: #043544dc; " id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm sticky-top" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Logo">
@@ -88,6 +88,23 @@
                     <a href="#formModal" class="btn btn-primary" data-toggle="modal">Get Started</a>
                 </div>
             </div>
+        </div>
+        <!--- Toggle---->
+        <div class="toggle">
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox" class="toggle-label">
+                <span class="toggle-label-inner"></span>
+            </label>
+        </div>
+        <div class="toggle-menu">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="course.html">Services</a></li>
+                <li><a href="blog.html">Blogs</a></li>
+                <li><a href="event.html">Events</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </div>
     </nav>
 
