--- a/index.html
+++ b/index.html
@@ -39,121 +39,70 @@
         <div class="spinner"></div>
     </div>
 
-    <!-- Top Bar -->
+    <!-- Top Bar (Mobile Friendly) -->
     <div class="top-bar">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="contact-info">
-                <span><i class="bi bi-envelope-fill"></i> info@mtendereconsult.com</span>
-                <span><i class="bi bi-telephone-fill"></i> +265 991 234 567</span>
-            </div>
-            <div class="social-links">
-                <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
-            </div>
+        <div class="container d-flex justify-content-between">
+            <span>+265 999 999 999 | info@mtendereconsult.com</span>
+            <span>Follow us: <a href="#">FB</a> | <a href="#">IG</a></span>
         </div>
     </div>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm sticky-top" id="navbar">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="course.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blogs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="event.html">Events</a>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <a href="#formModal" class="btn btn-primary" data-toggle="modal">Get Started</a>
-                </div>
-            </div>
-        </div>
-        <!--- Toggle---->
-        <div class="toggle">
-            <input type="checkbox" id="checkbox">
-            <label for="checkbox" class="toggle-label">
-                <span class="toggle-label-inner"></span>
-            </label>
-        </div>
-        <div class="toggle-menu">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="course.html">Services</a></li>
-                <li><a href="blog.html">Blogs</a></li>
-                <li><a href="event.html">Events</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="assets/imgs/mtendere_logo.png" alt="Mtendere Education Consult" class="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
             </ul>
         </div>
     </nav>
 
-    <!-- Hero Carousel -->
-    <section class="hero-section">
-        <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="6000">
-
-            <!-- Indicators -->
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"
-                    aria-current="true"></button>
-                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/imgs/Background/IMG-20230910-WA0082.jpg" class="d-block w-100" alt="Hero 1">
-                    <div class="carousel-caption d-flex align-items-center justify-content-center">
-                        <div class="container">
-                            <h2 class="text-white display-5">Discover Your Dreams</h2>
-                            <p class="lead text-white">Join us on a journey to study abroad in Malawi</p>
-                            <a href="#formModal" class="btn btn-primary btn-lg mt-4" data-toggle="modal">Apply Now</a>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="carousel-container">
+            <div id="hero-carousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/imgs/hero-image1.jpg" class="d-block w-100" alt="Education Image 1">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>Empowering the Future of Education</h1>
+                            <p>Explore our scholarship opportunities and education services.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/imgs/hero-image2.jpg" class="d-block w-100" alt="Education Image 2">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>Start Your Journey to Global Education</h1>
+                            <p>Connecting students with world-class institutions.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/imgs/hero-image3.jpg" class="d-block w-100" alt="Education Image 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>Transform Your Career with Us</h1>
+                            <p>World-class education at your fingertips.</p>
                         </div>
                     </div>
                 </div>
+                <a class="carousel-control-prev" href="#hero-carousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#hero-carousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            <div class="carousel-item">
-                <img src="assets/imgs/courses/IMG-20230620-WA0436.jpg" class="d-block w-100" alt="Hero 2">
-                <div class="carousel-caption d-flex align-items-center justify-content-center">
-                    <div class="container">
-                        <h2 class="text-white display-5">Your Future Awaits</h2>
-                        <p class="lead text-white">Explore top universities and scholarship opportunities</p>
-                        <a href="#formModal" class="btn btn-primary btn-lg mt-4" data-toggle="modal">Apply Now</a>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="assets/imgs/Background/IMG-20250321-WA0304.jpg" class="d-block w-100" alt="Hero 3">
-                <div class="carousel-caption d-flex align-items-center justify-content-center">
-                    <div class="container">
-                        <h2 class="text-white display-5">Empower Your Education</h2>
-                        <p class="lead text-white">Get personalized support for your study abroad journey</p>
-                        <a href="#formModal" class="btn btn-primary btn-lg mt-4" data-toggle="modal">Apply Now</a>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </section>
-
 
     <!-- Video Modal -->
     <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
@@ -1438,28 +1387,6 @@
         <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
     </a>
 
-    <!-- Back to Top Button -->
-    <button id="backToTop" title="Back to top">↑</button>
-
-    <!-- Footer End -->
-
-    <script src="assets/js/jquery-3.4.1.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/jquery.animateNumber.min.js"></script>
-    <script src="assets/js/jquery.waypoints.min.js"></script>
-    <script src="assets/js/jquery.fancybox.min.js"></script>
-    <script src="assets/js/jquery.sticky.js"></script>
-    <script src="assets/js/aos.js"></script>
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/custom.ts"></script>
-
-    <script src="assets/js/core/aosInit.js"></script>
-    <script src="assets/js/core/index.js"></script>
-    <script src="assets/js/core/jarallaxInit.js"></script>
-    <script src="assets/js/core/mobileMenu.js"></script>
-    <script src="assets/js/core/owlCarousels.js"></script>
     <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
     <div class="modal fade" id="story1" tabindex="-1" aria-labelledby="story1Label" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -1595,6 +1522,31 @@
             </div>
         </div>
     </div>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" title="Back to top">↑</button>
+
+    <!-- Footer End -->
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/jquery.animateNumber.min.js"></script>
+    <script src="assets/js/jquery.waypoints.min.js"></script>
+    <script src="assets/js/jquery.fancybox.min.js"></script>
+    <script src="assets/js/jquery.sticky.js"></script>
+    <script src="assets/js/aos.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom.ts"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+
+
+    <script src="assets/js/core/aosInit.js"></script>
+    <script src="assets/js/core/index.js"></script>
+    <script src="assets/js/core/jarallaxInit.js"></script>
+    <script src="assets/js/core/mobileMenu.js"></script>
+    <script src="assets/js/core/owlCarousels.js"></script>
+    
 
     <!-- SwiperJS Script -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
