--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
             <div id="hero-carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/imgs/hero-image1.jpg" class="d-block w-100" alt="Education Image 1">
+                        <img src="assets/imgs/Background/IMG-20240219-WA0074.jpg" class="d-block w-100" alt="Education Image 1">
                         <div class="carousel-caption d-none d-md-block">
                             <h1>Empowering the Future of Education</h1>
                             <p>Explore our scholarship opportunities and education services.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/hero-image2.jpg" class="d-block w-100" alt="Education Image 2">
+                        <img src="assets/imgs/Background/IMG-20230910-WA0082.jpg" class="d-block w-100" alt="Education Image 2">
                         <div class="carousel-caption d-none d-md-block">
                             <h1>Start Your Journey to Global Education</h1>
                             <p>Connecting students with world-class institutions.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/imgs/hero-image3.jpg" class="d-block w-100" alt="Education Image 3">
+                        <img src="assets/imgs/Breadcrumbs/Events.jpg" class="d-block w-100" alt="Education Image 3">
                         <div class="carousel-caption d-none d-md-block">
                             <h1>Transform Your Career with Us</h1>
                             <p>World-class education at your fingertips.</p>
