--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="assets/imgs/mtendere_logo.png" alt="Mtendere Education Consult" class="logo">
+            <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -733,160 +733,41 @@
             style="background-color: #ffcc00; color: #003366; padding: 12px 30px; font-size: 18px; font-weight: bold; border-radius: 50px; margin-top: 20px;">Apply
             Now</a>
     </section>
-
-    <!-- Modals Section -->
-    <!-- Example Modal for Caroline -->
-    <div class="modal fade" id="story1" tabindex="-1" aria-labelledby="story1Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story1Label">Caroline Tembo's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="untree_co-section bg-light">
+        <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Frequently Asked Questions</h6>
+                <h1 class="display-5"><span class="text-primary">
+                        <span>Have Questions? We Have Answers!</span>
+                </h1>
+                <p class="lead">
+                    <span>Explore our FAQs for quick answers to common queries.</span>
+                </p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">What services do you offer?</h5>
+                            <p class="card-text">We provide university application assistance, scholarship guidance,
+                                career counseling, and pre-departure support.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    Caroline Tembo from Kafukule village in Mzimba graduated with an Honours Degree in Commerce at PCTE
-                    Institute of Engineering in India. Through determination and the right support, she has turned her
-                    dreams into a global career opportunity.
+                <div class="col-lg-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">How can I apply for a scholarship?</h5>  
+                            <p class="card-text">You can apply through our unified application portal. Make sure to
+                                upload all required documents such as transcripts, CV, and identification documents.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Example Modal for Janet -->
-
-    <div class="modal fade" id="story2" tabindex="-1" aria-labelledby="story2Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story2Label">Janet Kandulu's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Janet Kandulu, a dedicated student from Malawi, pursued her BSc in Nutrition and Dietetics at
-                    Chandigarh University. Her journey is a testament to the power of education and the support of
-                    Mtendere Education Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Example Modal for Trust -->
-    <div class="modal fade" id="story3" tabindex="-1" aria-labelledby="story3Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story3Label">Trust Chikondi Mangani's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Trust Chikondi Mangani, a bright student from Malawi, pursued his BSc in Cybersecurity at Chandigarh
-                    University. His journey is a testament to the power of education and the support of Mtendere
-                    Education Consult.
-                    <p>He has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. His story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>He has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Example Modal for Edna -->
-    <div class="modal fade" id="story4" tabindex="-1" aria-labelledby="story4Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story4Label">Edna Karonga's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Edna Karonga, a dedicated student from Malawi, pursued her MBA at Chandigarh University. Her journey
-                    is a testament to the power of education and the support of Mtendere Education Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Example Modal for Ian -->
-    <div class="modal fade" id="story5" tabindex="-1" aria-labelledby="story5Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story5Label">Ian Ndola's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Ian Ndola, a bright student from Malawi, pursued his MBA at the University of Alabama. His journey
-                    is a testament to the power of education and the support of Mtendere Education Consult.
-                    <p>He has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. His story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>He has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Example Modal for Mirabel -->
-    <div class="modal fade" id="story6" tabindex="-1" aria-labelledby="story6Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story6Label">Mirabel Lopote's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Mirabel Lopote, a dedicated student from Malawi, pursued her Masters in Fashion Design at PCTE. Her
-                    journey is a testament to the power of education and the support of Mtendere Education Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Example Modal for Lexina -->
-    <div class="modal fade" id="story7" tabindex="-1" aria-labelledby="story7Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="story7Label">Lexina Kumwenda's Story</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Lexina Kumwenda, a bright student from Malawi, pursued her BSc in Interior Design at Chandigarh
-                    University. Her journey is a testament to the power of education and the support of Mtendere
-                    Education Consult.
-                    <p>She has been working with Mtendere Education Consult for over a decade, guiding students towards
-                        success and fulfillment. Her story serves as a reminder of the importance of education and the
-                        potential it can bring.</p>
-                    <p>She has worked with students from various backgrounds, including those who have faced adversity,
-                        and has shown them that education is not just about achieving academic success, but also about
-                        transforming lives.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Popup Overlay -->
     <!----
     <div id="popupContainer" class="popup-overlay" onclick="popup">
