--- a/index.html
+++ b/index.html
@@ -1060,10 +1060,10 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-lg-7 text-center mx-auto">
-                    <div class="owl-carousel wide-slider-testimonial">
+                <div class="carousel-container col-lg-7 text-center mx-auto">
+                    <div class="carousel-inner wide-slider-testimonial">
                         <!-- Testimonial 1 -->
-                        <div class="item">
+                        <div class="carousel-item active">
                             <blockquote class="block-testimonial">
                                 <p class="text-lg font-medium text-gray-600">
                                     &ldquo;Mtendere Education Consult’s personalized approach made all the difference. I
@@ -1079,7 +1079,7 @@
                         </div>
 
                         <!-- Testimonial 2 -->
-                        <div class="item">
+                        <div class="carousel-item">
                             <blockquote class="block-testimonial">
                                 <p class="text-lg font-medium text-gray-600">
                                     &ldquo;The guidance from Mtendere helped me get my scholarship in the UK! I now feel
@@ -1094,7 +1094,7 @@
                         </div>
 
                         <!-- Testimonial 3 -->
-                        <div class="item">
+                        <div class="carousel-item">
                             <blockquote class="block-testimonial">
                                 <p class="text-lg font-medium text-gray-600">
                                     &ldquo;Thanks to Mtendere, I could pursue my dream of studying abroad, and it feels
@@ -1110,7 +1110,7 @@
                         </div>
 
                         <!-- Testimonial 4 -->
-                        <div class="item">
+                        <div class="carousel-item">
                             <blockquote class="block-testimonial">
                                 <p class="text-lg font-medium text-gray-600">
                                     &ldquo;Mtendere made the entire process of studying abroad so seamless. From
