--- a/index.html
+++ b/index.html
@@ -667,48 +667,53 @@
                     Transforming Lives Through Education
                 </p>
             </div>
-            <div class="owl-carousel" data-aos="fade-up" data-aos-delay="200">
-                <div class="swiper-wrapper">
-                    <!-- Student 1 -->
-                    <div class="item active">
-                        <div class="student-card">
-                            <img src="assets/imgs/students/Carloline.jpg" alt="Caroline Tembo">
-                            <h3 class="student-name">Caroline Tembo</h3>
-                            <p class="student-course">Hons Degree in Commerce - PCTE India</p>
-                            <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story1">Read
-                                Story</a>
+            <div class="row">
+                <div class="carousel-container col-lg-4">
+                    <div class="carousel-inner" data-aos="fade-up" data-aos-delay="200">
+                        <div class="swiper-wrapper">
+                            <!-- Student 1 -->
+                            <div class="carousel-item">
+                                <div class="student-card">
+                                    <img src="assets/imgs/students/Carloline.jpg" alt="Caroline Tembo">
+                                    <h3 class="student-name">Caroline Tembo</h3>
+                                    <p class="student-course">Hons Degree in Commerce - PCTE India</p>
+                                    <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story1">Read
+                                        Story</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-wrapper">
+                            <!-- Student 2 -->
+                            <div class="carousel-item">
+                                <div class="student-card">
+                                    <img src="assets/imgs/students/Janet Kandulu.jpg" alt="Janet Kandulu">
+                                    <h3 class="student-name">Janet Kandulu</h3>
+                                    <p class="student-course">BSc Nutrition and Dietetics - Chandigarh</p>
+                                    <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story2">Read
+                                        Story</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-wrapper">
+                            <!-- Student 3 -->
+                            <div class="carousel-item">
+                                <div class="student-card">
+                                    <img src="assets/imgs/students/Trust Chikondi Mangani.jpg" alt="Trust Chikondi Mangani">
+                                    <h3 class="student-name">Trust Chikondi Mangani</h3>
+                                    <p class="student-course">BSc Cybersecurity - 2023</p>
+                                    <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story3">Read
+                                        Story</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-wrapper">
-                    <!-- Student 2 -->
-                    <div class="item">
-                        <div class="student-card">
-                            <img src="assets/imgs/students/Janet Kandulu.jpg" alt="Janet Kandulu">
-                            <h3 class="student-name">Janet Kandulu</h3>
-                            <p class="student-course">BSc Nutrition and Dietetics - Chandigarh</p>
-                            <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story2">Read
-                                Story</a>
-                        </div>
-                    </div>
+                <div class="text-center mt-5">
+                    <a href="#" class="btn btn-primary"
+                        style="background-color: #ffcc00; color: #003366; padding: 12px 30px; font-size: 18px; font-weight: bold; border-radius: 50px;">See
+                        More Success Stories
+                    </a>
                 </div>
-                <div class="swiper-wrapper">
-                    <!-- Student 3 -->
-                    <div class="item">
-                        <div class="student-card">
-                            <img src="assets/imgs/students/Trust Chikondi Mangani.jpg" alt="Trust Chikondi Mangani">
-                            <h3 class="student-name">Trust Chikondi Mangani</h3>
-                            <p class="student-course">BSc Cybersecurity - 2023</p>
-                            <a href="#" class="read-story-btn" data-bs-toggle="modal" data-bs-target="#story3">Read
-                                Story</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center mt-5">
-                <a href="#" class="btn btn-primary"
-                    style="background-color: #ffcc00; color: #003366; padding: 12px 30px; font-size: 18px; font-weight: bold; border-radius: 50px;">See
-                    More Success Stories</a>
             </div>
         </div>
     </section>
@@ -963,6 +968,30 @@
                     University, Jain University, and more.</p>
             </div>
 
+            <button class="accordion">What is the process for submitting an application?</button>
+            <div class="panel">
+                <p>Submit your application through our unified application portal. Make sure to upload all required documents
+                    such as transcripts, CV, and identification documents.</p>
+                <p>Your application will be reviewed by our team and you will be notified if your application is selected
+                    for further processing.</p>
+                <p>If your application is selected, we will contact you for further details.</p>
+            </div>
+
+            <button class="accordion">How can I contact Mtendere Education Consult?</button>
+            <div class="panel">
+                <p>You can reach us through our website contact form, email us at
+                    <a href="mailto:info@mtendereeducationconsult.com">info@mtendereeducationconsult.com</a>.</p>
+                <p>You can also reach us through our social media channels, such as Facebook, Twitter, and LinkedIn.</p>
+            </div>
+
+            <button class="accordion">What are the payment options for tuition fees?</button>
+            <div class="panel">
+                <p>Payment options vary by university. Most accept bank transfers, credit cards, and some offer
+                    installment plans. Check with the specific university for details.</p>
+                <p>Please note that you will need to provide proof of payment (e.g., bank statement, cheque) if you choose to
+                    pay by bank transfer.</p>
+            </div>
+
         </div>
     </div>
 
@@ -980,16 +1009,88 @@
                     <option value="ct">CT University</option>
                     <option value="shoolini">Shoolini University</option>
                     <option value="jain">Jain University</option>
+                    <option value="pcte">PCTE Group of Institutes</option>
+                    <option value="others">Others</option>
+                    <option value="others-text">Others (Please specify)
+                        <input type="text" id="otherUniversity" name="otherUniversity" placeholder="Enter University Name"
+                            style="display:none;">
+                        <input type="text" id="otherProgram" name="otherProgram"
+                            placeholder="Enter Program Name" style="display:none;">
+                        
+                    </option>
                 </select>
 
                 <label for="intakeMonth">Available Intake Months</label>
-                <select id="intakeMonth" name="intakeMonth" required></select>
+                <select id="intakeMonth" name="intakeMonth" required>
+                    <option value="">-- Choose Intake Month --</option>
+                    <option value="january">January</option>
+                    <option value="february">February</option>
+                    <option value="march">March</option>
+                    <option value="april">April</option>
+                    <option value="may">May</option>
+                    <option value="june">June</option>
+                    <option value="july">July</option>
+                    <option value="august">August</option>
+                    <option value="september">September</option>
+                    <option value="october">October</option>
+                    <option value="november">November</option>
+                    <option value="december">December</option>
+                </select>
 
                 <label for="program">Available Programs</label>
-                <select id="program" name="program" required></select>
+                <select id="program" name="program" required>
+                    <option value="">-- Choose Program --</option>
+                    <!--- BSC ---->
+                    <option value="bsc">BSc in Computer Science</option>
+                    <option value="bsc-software">BSc in Nursing</option>
+                    <option value="bsc-it">BSc in Information Technology</option>
+                    <option value="bsc-cyber">BSc in Cybersecurity</option>
+                    <option value="bsc-business">BSc in Business Administration</option>
+                    <option value="bsc-finance">BSc in Finance</option>
+                    <option value="bsc-marketing">BSc in Marketing</option>
+                    <option value="bsc-engineering">BSc in Engineering</option>
+                    <option value="bsc-law">BSc in Law</option>
+                    <option value="bsc-medicine">BSc in Medicine</option>
+                    <option value="bsc-architecture">BSc in Architecture</option> 
+
+                    <!---- master --->
+                    <option value="master">Master in Computer Science</option>
+                    <option value="master-software">Master in Nursing</option>
+                    <option value="master-it">Master in Information Technology</option>
+                    <option value="master-cyber">Master in Cybersecurity</option>
+                    <option value="master-business">Master in Business Administration</option>
+                    <option value="master-finance">Master in Finance</option>
+                    <option value="master-marketing">Master in Marketing</option>
+                    <option value="master-engineering">Master in Engineering</option>
+                    <option value="master-law">Master in Law</option>
+                    <option value="master-medicine">Master in Medicine</option>
+                    <option value="master-architecture">Master in Architecture</option>
+
+                    <!---- Phds---->
+                    <option value="phd">PhD in Computer Science</option>
+                    <option value="phd-software">PhD in Nursing</option>
+                    <option value="phd-it">PhD in Information Technology</option>
+                    <option value="phd-cyber">PhD in Cybersecurity</option>
+                    <option value="phd-business">PhD in Business Administration</option>
+                    <option value="phd-finance">PhD in Finance</option>
+                    <option value="phd-marketing">PhD in Marketing</option>
+                    <option value="phd-engineering">PhD in Engineering</option>
+                    <option value="phd-law">PhD in Law</option>
+                    <option value="phd-medicine">PhD in Medicine</option>
+                    <option value="phd-architecture">PhD in Architecture</option>
+
+                </select>
 
                 <label for="documents">Required Documents</label>
-                <textarea id="documents" name="documents" readonly></textarea>
+                <textarea id="documents" name="documents" readonly>
+                    1. Passport Copy<br>
+                    2. Academic Transcripts<br>
+                    3. CV/Resume<br>
+                    4. Statement of Purpose<br>
+                    5. Recommendation Letters<br>
+                    6. English Proficiency Test Scores (if applicable)<br>
+                    7. Financial Documents (if applicable)<br>
+                </textarea>
 
                 <label for="fullname">Full Name</label>
                 <input type="text" name="fullname" required>
@@ -1020,6 +1121,27 @@
                         required>
                 </div>
 
+                <!----- Implement these 4. Statement of Purpose<br>
+                    5. Recommendation Letters<br>
+                    6. English Proficiency Test Scores (if applicable)<br>
+                    7. Financial Documents (if applicable)<br>
+                ----->
+                <div class="file-input">
+                    <label for="statementOfPurpose">Upload Statement of Purpose (PDF, DOCX only)</label>
+                    <input type="file" id="statementOfPurpose" name="statementOfPurpose" accept=".pdf, .docx"
+                        required>
+                </div>
+
+                <div class="file-input">
+                    <label for="recommendationLetter">Upload Recommendation Letter (PDF, DOCX only)</label>
+                    <input type="file" id="recommendationLetter" name="recommendationLetter" accept=".pdf, .docx">   
+                </div>
+                <div class="file-input">
+                    <label for="englishProficiencyTestScores">Upload English Proficiency Test Scores (PDF, DOCX only)</label>
+                    <input type="file" id="englishProficiencyTestScores" name="englishProficiencyTestScores"
+                        accept=".pdf, .docx">
+                </div>
+
                 <label for="motivation">Why are you choosing this program?</label>
                 <textarea name="motivation" rows="3" required></textarea>
 
@@ -1033,6 +1155,9 @@
 
                 <label for="intelligence">Quick Logic Challenge: What comes next? 2, 4, 8, 16, ___</label>
                 <input type="text" name="intelligence" required placeholder="Your answer here">
+
+                <label for="hobbies">Hobbies and Interests</label>
+                <textarea name="hobbies" rows="3" required></textarea>
 
                 <label for="personality">Personality Traits</label>
                 <select name="personality" required>
@@ -1063,7 +1188,7 @@
                 <div class="carousel-container col-lg-7 text-center mx-auto">
                     <div class="carousel-inner wide-slider-testimonial">
                         <!-- Testimonial 1 -->
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <blockquote class="block-testimonial">
                                 <p class="text-lg font-medium text-gray-600">
                                     &ldquo;Mtendere Education Consult’s personalized approach made all the difference. I
@@ -1153,10 +1278,10 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-lg-7 text-center mx-auto">
-                    <div class="owl-carousel wide-slider-blog">
+                <div class="carousel-container col-lg-7 text-center mx-auto">
+                    <div class="carousel-inner wide-slider-blog">
                         <!-- Blog Post 1 -->
-                        <div class="item">
+                        <div class="carousel-item">
                             <div class="blog-post">
                                 <img src="assets/imgs/2020mBatch Departure day.jpg" alt="Blog Post 1" class="img-fluid">
                                 <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a>
@@ -1166,7 +1291,7 @@
                         </div>
 
                         <!-- Blog Post 2 -->
-                        <div class="item">
+                        <div class="carousel-item">
                             <div class="blog-post">
                                 <img src="assets/imgs/Abroad students Malawi flag.jpg" alt="Blog Post 2"
                                     class="img-fluid">
@@ -1176,13 +1301,21 @@
                         </div>
 
                         <!-- Blog Post 3 -->
-                        <div class="item">
+                        <div class="carousel-item">
                             <div class="blog-post">
                                 <img src="assets/imgs/doctors pose.jpg" alt="Blog Post 3" class="img-fluid">
                                 <h4 class="mt-3"><a href="#">Tips for Successful University Applications</a></h4>
                                 <p>Get tips and tricks for making your university application stand out.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="text-center">
+                        <a href="#" class="btn btn-primary btn-lg mt-5">
+                            <span class="icon-arrow-right"></span>
+                            <span>View All Blogs</span>
+                        </a>
                     </div>
                 </div>
             </div>
