--- a/index.html
+++ b/index.html
@@ -709,8 +709,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-5">
-                    <a href="#" class="btn btn-primary"
-                        style="background-color: #ffcc00; color: #003366; padding: 12px 30px; font-size: 18px; font-weight: bold; border-radius: 50px;">See
+                    <a href="#" class="btn btn-primary">See
                         More Success Stories
                     </a>
                 </div>
@@ -724,9 +723,7 @@
         <h2 style="font-size: 32px; font-weight: 700;">Ready to Start Your Global Education Journey?</h2>
         <p style="margin: 20px auto; max-width: 600px; font-size: 18px;">Join hundreds of successful students who
             trusted Mtendere Education Consult to unlock opportunities abroad. Your success story starts now.</p>
-        <a href="" class="btn btn-primary"
-            style="background-color: #ffcc00; color: #003366; padding: 12px 30px; font-size: 18px; font-weight: bold; border-radius: 50px; margin-top: 20px;">Apply
-            Now</a>
+        <a href="" class="btn btn-primary">Apply Now</a>
     </section>
 
     <!-- Modals Section -->
