--- a/index.html
+++ b/index.html
@@ -29,13 +29,51 @@
         <div class="spinner"></div>
     </div>
 
-    <!-- Top Bar (Mobile Friendly) -->
-    <div class="top-bar">
-        <div class="container d-flex justify-content-between">
-            <span>+265 999 999 999 | info@mtendereconsult.com</span>
-            <span>Follow us: <a href="#">FB</a> | <a href="#">IG</a></span>
+    <!-- Top Bar -->
+    <div class="top-bar py-2 bg-light">
+        <div class="container">
+            <div class="row justify-content-between">
+
+                <div class="col-md-8 d-flex">
+                    <a href="#faqModal" class="small mr-4" data-toggle="modal">
+                        <i class="fa fa-question-circle mr-1"></i> Have a Question?
+                    </a>
+                    <a href="tel:" class="small text-dark mr-4">
+                        <i class="fa fa-phone mr-1">
+                            +265999360325 | +265887209531
+                        </i>
+                    </a>
+
+                    <a href="https://www.facebook.com/MtendereEducationConsult/" class="small mr-4" target="_blank">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a href="https://twitter.com/MtendereEduCon" class="small mr-4" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com/mtendere_education_consult/" class="small mr-4" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/company/mtendere-education-consult/" class="small mr-4" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+
+                    <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
+                        <i class="fa fa-envelope mr-1"></i> mtendereeduconsult@gmail.com
+                    </a>
+                </div>
+
+                <div class="col-md-4 d-flex justify-content-end align-items-center">
+                    <select class="form-select form-select-sm mr-3" id="language-select">
+                        <option value="en">English</option>
+                        <option value="es">Español</option>
+                        <option value="fr">Français</option>
+                    </select>
+                </div>
+
+            </div>
         </div>
     </div>
+    <!-- End Top Bar -->
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -48,9 +86,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
+                <li class="nav-item"><a class="nav-link" href="course.html">Scholarships</a></li>
+                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+                <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
