--- a/testimonial.html
+++ b/testimonial.html
@@ -59,10 +59,26 @@
                         <i class="fa fa-question-circle mr-1"></i> Have a Question?
                     </a>
                     <a href="tel:" class="small text-dark mr-4">
-                        <i class="fa fa-phone mr-1"></i>
+                        <i class="fa fa-phone mr-1">
+                            +265999360325 | +265887209531
+                        </i>
                     </a>
+
+                    <a href="https://www.facebook.com/MtendereEducationConsult/" class="small mr-4" target="_blank">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a href="https://twitter.com/MtendereEduCon" class="small mr-4" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com/mtendere_education_consult/" class="small mr-4" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/company/mtendere-education-consult/" class="small mr-4" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+
                     <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
-                        <i class="fa fa-envelope mr-1"></i> mtendereeducationconsult@gmail.com
+                        <i class="fa fa-envelope mr-1"></i> mtendereeduconsult@gmail.com
                     </a>
                 </div>
 
@@ -322,7 +338,7 @@
                         1st Floor Room 1,<br>
                         Lilongwe<br>
                     </p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>+265999360325 | +265887209531</p>
                     <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
