--- a/index.html
+++ b/index.html
@@ -770,6 +770,7 @@
 
     <!-- Modals Section -->
     <!-- Example Modal for Caroline -->
+    <!-- Corrected Modal Example -->
     <div class="modal fade" id="story1" tabindex="-1" aria-labelledby="story1Label" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
@@ -1539,7 +1540,7 @@
     </div>
     <div class="copyrights">
         <div class="container">
-            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</p>
         </div>
     </div>
     <!-- Footer End -->
@@ -1561,7 +1562,6 @@
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/custom.ts"></script>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
@@ -1571,6 +1571,25 @@
     <script src="assets/js/core/mobileMenu.js"></script>
     <script src="assets/js/core/owlCarousels.js"></script>
     
+    <!-- Corrected Modal Example -->
+    <div class="modal fade" id="story1" tabindex="-1" aria-labelledby="story1Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="story1Label">Caroline Tembo's Story</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Caroline Tembo from Kafukule village in Mzimba graduated with an Honours Degree in Commerce at PCTE
+                    Institute of Engineering in India. Through determination and the right support, she has turned her
+                    dreams into a global career opportunity.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Updated Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- SwiperJS Script -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
